--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <p>Help others discover the path to salvation by sharing this message:</p>
                 <div class="share-buttons">
                     <a href="#" onclick="shareToFacebook()" class="share-btn facebook">
-                        <span><img src="fb-icon.png" /></span>
+                        <span><img src="fb-icon.png" style="width: 25px; margin-top: 8px;" /></span>
                         <span>Share on Facebook</span>
                     </a>
                     <a href="#" onclick="shareViaEmail()" class="share-btn email">
@@ -892,7 +892,7 @@
                 <p>Help equip other believers for evangelism by sharing this soul winning guide:</p>
                 <div class="share-buttons">
                     <a href="#" onclick="shareToFacebook()" class="share-btn facebook">
-                        <span></span>
+                        <span><img src="fb-icon.png" style="width: 25px; margin-top: 8px;" /></span>
                         <span>Share on Facebook</span>
                     </a>
                     <a href="#" onclick="shareViaEmail()" class="share-btn email">
